tests/semantic/invalid/65_i8_attr_infer_mismatch.hulk
type C {
    n: String = 0;
}
